--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Vinit-R-Iyer/Foxtrot-Openmesh-Hackathon#readme",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "hardhat": "^2.19.2"
+    "hardhat": "^2.19.2",
+    "prettier": "^3.1.1"
   }
 }
