--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This Repository is a shared repository for the Hackathon Challenge 01 of Openmesh.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write ."
   },
   "repository": {
     "type": "git",
